[workspace]
members = ["alloc"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.0.0" }
crossterm = { version = "0.28.1" }
libc = { version = "0.2.174" }
ratatui = { version = "0.28.0" }
rts-alloc = { path = "alloc" }

[profile.release-with-fp]
inherits = "release"
debug = true
strip = false
debug-assertions = false
overflow-checks = false
lto = false
