[package]
name = "rts-alloc"
edition = "2021"
version = "0.1.0"
description = "Shared memory allocator intended for small frequent allocations"
license-file = "LICENSE"
repository = "https://github.com/apfitzge/rts-alloc"
authors = ["Andrew Fitzgerald <apfitzge@gmail.com>"]

[dependencies]
libc = { version = "0.2.174" }
